--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description: '前人裁树，后人乘凉'
 keywords:
 author: VsKendo
 language: zh-CN
-timezone: ''
+timezone: 'Asia/Shanghai'
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
@@ -62,7 +62,7 @@ prismjs:
 # order_by: Posts order. (Order by date descending by default)
 index_generator:
   path: ''
-  per_page: 10
+  per_page: 12
   order_by: -date
 
 # Category & Tag
@@ -111,10 +111,10 @@ deploy:
 feed:
   type: atom
   path: atom.xml
-  limit: 20
+  limit: 10
   hub:
   content:
-  content_limit: 140
+  content_limit: 100
   content_limit_delim: ' '
   order_by: -date
 
